# unix-agent

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  tox.ini
dcm-agent-docker/src/: setup.py
dcm/agent/: cloud_instance.py  cloudmetadata.py  config.py  main.py  (+6 more)
docs/: Makefile  README.txt  add_users.rst  architecture.rst  commands.rst  conf.py  console.rst  dcm.agent.events.rst  dcm.agent.messaging.rst  dcm.agent.plugins.api.rst  distros.rst  index.rst  install.rst  intro.rst  modules.rst  scrubber.rst  troubleshooting.rst
etc/: agent.conf.sample  agent.conf.template  logging.yaml  logging.yaml.template  plugin.conf.sample  plugin.conf.template  plugin.conf.test
extras_builder/: README.md  build-packages.sh
konami/: .gitignore  Dockerfile  README.md  README.old  bootstrap.sh  build-image.sh  env.defaults  env.sh  install-agent.sh  nuke-docker.sh  plugin.conf  reconfigure-and-start-agent.sh  rename
omnibus-dcm-agent/: .gitignore  .kitchen.yml  .kitchen.yml.ec2  .kitchen.yml.vb  Berksfile  Dockerfile  Gemfile  README.md  Vagrantfile  build-one-at-a-time.sh  build-packages.py  install-agent.sh  omnibus.rb  package.sh  rename-and-upload.sh  runagent.sh  upload.sh
omnibus-es-ex-pyagent/: Dockerfile  README.md  Vagrantfile  install-agent.sh  runagent.sh
src/: MANIFEST.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt
tests/: README.md  Vagrantfile  Vagrantfile.test  __init__.py  agent_docker.sh  install_agent_test.sh  run-all-distro-tests.sh  test-distro.sh  testenv.sh
(+709 files in other folders)
