[metadata]
name = es-ex-pyagent
version = 0.1
summary = Agent for DCM run VMs
description-file = README.md
author = Dell Software Group
author-email = enstratius@XXXCHANGETHISdell.com
home-page = http://www.enstratius.com/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    dcm

[entry_points]
console_scripts =
    agent-service=dcm.agent.cmd.service:main

[nosetests]
verbosity=2
tests=dcm/agent/tests
cover-package = dcm.agent
cover-html = true
cover-erase = true
